feat(user-role): implement role-based structure and academics module

--- a/public/i18n/en-US.json
+++ b/public/i18n/en-US.json
@@ -78,6 +78,7 @@
     "permissions.role-switching": "Role Switching",
     "permissions.route-guard": "Route Guard",
     "permissions.test": "Permission Test",
+    "academics": "Academics",
     "manage_students": "Manage Students",
     "manage_students.students": "Students",
     "manage_students.academic_records": "Academic Records"
